--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.4",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.14",
